WIP:02: Benchmarks usin parellelism
MMPosix use parallelism allowing to choose the number of sockets
to process the matriz multiplication.

Error in fuction multMM, needs to fix and need to program the
same function in module.c

Author: Andrés C. López

--- a/Benchmarks con paralelismo/Makefile
+++ b/Benchmarks con paralelismo/Makefile
@@ -1,24 +1,23 @@
 GCC = gcc 
 FLAGS = -pedantic -Wall
-CFLAGS = -lm -pthread
+CFLAGS = -lm -lpthread
 
 PROGS: MM1c MM1f MMPosix
 
-
 MM1c:
-	$(GCC) $(FLAGS) modulo.c -c
+	$(GCC) $(FLAGS) module.c -c $(FLAGS)
 	$(GCC) $(FLAGS) $@.c -c 
-	$(GCC) $(FLAGS) modulo.o $@.o -o $@
+	$(GCC) $(FLAGS) module.o $@.o -o $@
 	
 MM1f:
-	$(GCC) $(FLAGS) modulo.c -c
+	$(GCC) $(FLAGS) module.c -c $(FLAGS)
 	$(GCC) $(FLAGS) $@.c -c 
-	$(GCC) $(FLAGS) modulo.o $@.o -o $@
+	$(GCC) $(FLAGS) module.o $@.o -o $@
 		
 MMPosix:
-	$(GCC) $(FLAGS) modulo.c -c
-	$(GCC) $(FLAGS) $@.c -c 
-	$(GCC) $(FLAGS) modulo.o $@.o -o $@
+	$(GCC) $(FLAGS) module.c -c $(CFLAGS)
+	$(GCC) $(FLAGS) $@.c -c $(CFLAGS) 
+	$(GCC) $(FLAGS) module.o $@.o -o $@ $(CFLAGS) 
 
 clean:
 	$(RM) $(PROGS) *.o
