WIP:05: Improving code structure and performance
Update fuctions names, correct identation and
condtionals for the error handling

Author: Andrés C. López

--- a/Benchmarks con paralelismo/Makefile
+++ b/Benchmarks con paralelismo/Makefile
@@ -1,16 +1,16 @@
-GCC = gcc 
-FLAGS = -pedantic -Wall
+GCC = gcc
+FLAGS = -pedantic -Wall -fopenmp
 CFLAGS = -lm -lpthread
 
 PROGS: MM1c MM1f MMPosix
 
 MM1c:
-	$(GCC) $(FLAGS) modulo.c -c $(FLAGS)
+	$(GCC) $(FLAGS) modulo.c -c
 	$(GCC) $(FLAGS) $@.c -c 
 	$(GCC) $(FLAGS) modulo.o $@.o -o $@
 	
 MM1f:
-	$(GCC) $(FLAGS) modulo.c -c $(FLAGS)
+	$(GCC) $(FLAGS) modulo.c -c
 	$(GCC) $(FLAGS) $@.c -c 
 	$(GCC) $(FLAGS) modulo.o $@.o -o $@
 		
