WIP:05: Improving the code
Setting the maximun dimension for printing a matrix
Ficing the style of printed matrix
Added a new parameter on the print functions, parameter = name
is use to print the name of the matrix.

Author: Andrés C. López

--- a/Benchmarks con paralelismo/Makefile
+++ b/Benchmarks con paralelismo/Makefile
@@ -1,8 +1,7 @@
 GCC = gcc
 FLAGS = -pedantic -Wall -fopenmp
 CFLAGS = -lm -lpthread
-
-PROGS: MM1c MM1f MMPosix
+PROGS = MM1c MM1f MMPosix
 
 MM1c:
 	$(GCC) $(FLAGS) modulo.c -c
@@ -21,4 +20,3 @@ MMPosix:
 
 clean:
 	$(RM) $(PROGS) *.o
-	$(RM) MM1c MM1f MMPosix
