END: Becnhmark with parallel and OMP
The programs in the folder are finished. Each one executes the
matrix multiplication in different ways. Read the README to
execute them.

Author: Andrés C. López

--- a/05.Benchmarks_w_Parallel/Makefile
+++ b/05.Benchmarks_w_Parallel/Makefile
@@ -1,20 +1,32 @@
-GCC = gcc
-FLAGS = -pedantic -Wall -fopenmp
-CFLAGS = -lm -lpthread
-PROGS = MM1c MM1f MMPosix
+GCC = gcc-11
+FLAGS = -pedantic -Wall
+CFLAGS = -fopenmp -lpthread 
+PROGS= MM1c MM1f MMPosix MM1cOMP MM1fOMP
+
+PROGS: MM1c MM1f MMPosix MM1cOMP MM1fOMP
 
 MM1c:
-	$(GCC) $(FLAGS) modulo.c -c
+	$(GCC) $(FLAGS) modulo.c -c 
 	$(GCC) $(FLAGS) $@.c -c 
 	$(GCC) $(FLAGS) modulo.o $@.o -o $@
 	
 MM1f:
-	$(GCC) $(FLAGS) modulo.c -c
+	$(GCC) $(FLAGS) modulo.c -c 
 	$(GCC) $(FLAGS) $@.c -c 
 	$(GCC) $(FLAGS) modulo.o $@.o -o $@
 		
 MMPosix:
 	$(GCC) $(FLAGS) modulo.c -c $(CFLAGS)
+	$(GCC) $(FLAGS) $@.c -c $(CFLAGS) 
+	$(GCC) $(FLAGS) modulo.o $@.o -o $@ $(CFLAGS) 
+
+MM1cOMP:
+	$(GCC) $(FLAGS) modulo.c -c $(CFLAGS) 
+	$(GCC) $(FLAGS) $@.c -c $(CFLAGS) 
+	$(GCC) $(FLAGS) modulo.o $@.o -o $@ $(CFLAGS) 
+ 
+MM1fOMP:
+	$(GCC) $(FLAGS) modulo.c -c $(CFLAGS) 
 	$(GCC) $(FLAGS) $@.c -c $(CFLAGS) 
 	$(GCC) $(FLAGS) modulo.o $@.o -o $@ $(CFLAGS) 
 
